5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4138/executions/1618_2931.log
== TEST (2019-04-02 11:02:52) 
-- CODE:
H = float(input("insira a altura: "))

from math import *
g = 9.81
V = sqrt(2 * g *h)

print(V)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    V = sqrt(2 * g *h)
NameError: name 'h' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:03:07) 
-- CODE:
H = float(input("insira a altura: "))

from math import *
g = 9.81
V = sqrt(2 * g * H)

print(V)
-- OUTPUT:
54.753410852658305
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 11:03:19) 
-- CODE:
H = float(input("insira a altura: "))

from math import *
g = 9.81
V = sqrt(2 * g * H)

print(V)
-- EXECUTION TIME:
0.239867
-- TEST CASE 1:
---- input:
152.8
---- correct output:
54.753410852658305
---- user output:
54.753410852658305
-- TEST CASE 2:
---- input:
325.3
---- correct output:
79.8898366502273
---- user output:
79.8898366502273
-- TEST CASE 3:
---- input:
12.7
---- correct output:
15.785246276190943
---- user output:
15.785246276190943
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
